2009-08-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-util.el (w3m-puny-decode-url): Decode the part of hostname only.
	Add doc-strings.
	(w3m-puny-encode-url): Add doc-strings.

2009-08-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-puny-utf-16be): New variable.
	(w3m-url-readable-string): Call `w3m-puny-decode-url'.
	(w3m-url-transfer-encode-string): Call `w3m-puny-encode-url'.
	(w3m-header-line-insert): Call `w3m-puny-decode-url'.
	(w3m-input-url): Call `w3m-puny-decode-url' for initial URL.

	* w3m-util.el (top): Add the variable definition of `w3m-puny-utf-16be'
	to avoid byte-compile warnings.
	(w3m-puny-code-regex, w3m-puny-code-nonascii, w3m-puny-base)
	(w3m-puny-tmin, w3m-puny-tmax, w3m-puny-damp, w3m-puny-skew)
	(w3m-puny-initial-bias, w3m-puny-initial-n, w3m-puny-delimiter): New
	constants.
	(w3m-puny-adapt, w3m-puny-decode-digit, w3m-puny-encode-digit)
	(w3m-puny-decode1, w3m-puny-decode, w3m-puny-decode-url)
	(w3m-puny-encode1, w3m-puny-encode, w3m-puny-encode-url): New
	functions.

2009-08-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-decode-anchor-string): Convert contol-characters to
	space.

2009-07-17  Naohiro Aota  <naota@elisp.net>

	* w3m.el (w3m-about-retrieve): When type is `nil', decode cached
	contents to display source of 404 page.  Reported by Dan Jacobson
	<jidanni@jidanni.org>.
	(w3m-do-cleanup-temp-files): New customize variable.
	(w3m-cleanup-temp-files): Use it.
	(toplevel): Call it when emacs-w3m shutdown.

2009-07-04  Naohiro Aota  <naota@elisp.net>

	* w3m-search.el (w3m-search-thing-at-point-arg): New variable.
	(w3m-search-read-query): Use it.

	* w3m-util.el (w3m-current-title): Set title to "<retrieving>>" when
	w3m is retrieving a page.

2009-06-13  Kevin Ryde  <user42@zip.com.au>

	* w3m.el (w3m-view-recenter): Only nil,t,integer, not a cons.
	(w3m-search-name-anchor, w3m-view-this-url-1): No arg to w3m-recenter.
	(w3m-next-anchor, w3m-previous-anchor, w3m-next-form,